--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <title>Vertical slider</title>
+    <title>Vertical slide</title>
   </head>
   <body>
     <div class="slider-container">
